# motion-capture-rs

./: .gitignore  Cargo.toml  Raw-value-stream-serial.ipynb  cfg.toml.example  sdkconfig.defaults
.cargo/: config.toml
.ipynb_checkpoints/: Raw-value-stream-serial-checkpoint.ipynb
analysis/: AccelerometerCalibration.ipynb  capture_sample.py  cpu_load_acq_10ms_in_f32.sysview  cpu_load_acq_5ms_in_f32.sysview  gesture_detect.ipynb  live_dataview_chart.ipynb  requirements.txt
src/: analysis.rs  imu_tracker.rs  main.rs  state_machine.rs
