[package]
name = "test-hardware"
version = "0.1.0"
authors = ["Luis Linares <linares.luis@proton.me>", "Jan Herlyn <jan@jan-herlyn.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]

pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48", default-features = false }
embedded-hal = "*"
embedded-svc = "0.27"
mpu9250 = "0.25"
anyhow = "1"
imu-fusion = "0.2.4"
toml-cfg = "0.2.0"

[build-dependencies]
embuild = "0.31"
anyhow = "1"
